Bug 168025 - Style numbers in navigator do not always match style numbers in highlight
Summary: Style numbers in navigator do not always match style numbers in highlight
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Jim Raykowski
URL:
Whiteboard: target:26.2.0 target:25.8.3
Keywords: bibisected, bisected, regression
: 168670 (view as bug list)
Depends on:
Blocks: Sidebar-Styles-Improvements
  Show dependency treegraph
 
Reported: 2025-08-20 12:30 UTC by thedeadlysarcasm
Modified: 2025-10-04 10:37 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample document which displays the issue (13.81 KB, application/vnd.oasis.opendocument.text)
2025-08-20 12:31 UTC, thedeadlysarcasm
Details

Note You need to log in before you can comment on or make changes to this bug.
Description thedeadlysarcasm 2025-08-20 12:30:20 UTC
Description:
After updating to 25.8, I noticed that in most documents I have with custom styles the style numbers in the style navigator do not match the style numbers in the highlight to the left of the text in the document itself.

Steps to Reproduce:
1. Open attached document
2. Open style navigator
3. Select "applied styles"
4. Check "highlight styles"
5. Compare the style numbers in the navigator to the style numbers to the left of the text

Actual Results:
Numbers do not always match.

Expected Results:
Numbers should match.


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 25.8.0.4 (X86_64)
Build ID: 48f00303701489684e67c38c28aff00cd5929e67
CPU threads: 4; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Raster; VCL: win
Locale: it-IT (it_IT); UI: it-IT
Calc: threaded

Highlight colours seem to be fine.
Comment 1 thedeadlysarcasm 2025-08-20 12:31:03 UTC
Created attachment 202399 [details]
Sample document which displays the issue
Comment 2 BogdanB 2025-08-20 12:36:30 UTC
From what I know, when style Chapter Style is having as parent the style Default Style, the Default style will be there also.
Comment 3 V Stuart Foote 2025-08-21 11:01:25 UTC
Confirmed.

The 'Spotlight' numberings of the test doc are fine in 25.2.5 (para annotations on canvas match listing in the SB).  But in 25.8.0.2 they do not match, and seem out of sync.

Seems almost like the labeling in the SB is being resorted.

Version: 25.8.0.2 (X86_64)
Build ID: 80a8bc2ef75d415a197e282da0ebf917315d5e24
CPU threads: 28; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded

likewise last available nightly of master against 26.2.0 on 20250723

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7f4868348c14b305fcd75744e1e3544d0d3a5d61
CPU threads: 28; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 4 Saburo 2025-08-23 07:44:24 UTC
bibisected with linux-64-25.8 28a29d88a4e464f817f9868c3717bc3602f7ed1f is the first bad commit
    source b5e366c97d813c65d477941d45ae55f7dff954ad

commit b5e366c97d813c65d477941d45ae55f7dff954ad
author	Jim Raykowski <raykowj@gmail.com>	Thu Apr 03 13:10:20 2025 -0800

tdf#165998 Spotlight switches the view to the Stylist

* Makes turning on spotlight not switch to the Styles deck unless the
sidebar is not currently open.

* Makes turning off spotlight not switch to the Styles deck.

* Fixes incorrect spotlight checkbutton state in the Styles deck when
the state is changed in the Styles Inspector deck.

* Fixes spotlight not turning on using the Styles Inspector deck
spotlight buttons before visiting the Styles deck once.

Change-Id: I6d2dea05c0ba47fbe3bf63d3caed8d87960df7ac
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183694
Comment 5 thedeadlysarcasm 2025-09-01 09:00:18 UTC
Update: bug is still present in 25.8.1.1.

Version: 25.8.1.1 (X86_64)
Build ID: 54047653041915e595ad4e45cccea684809c77b5
CPU threads: 4; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Raster; VCL: win
Locale: it-IT (it_IT); UI: it-IT
Calc: threaded

(No rush in fixing this, it's a minor thing and there's an easy workaround; just letting you all know.)
Comment 6 Commit Notification 2025-09-23 14:44:03 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3967cdfe862dd4d542ae50cf16c46a62ab17cfa0

tdf#168025 Fix style spotlight numbers in styles list do not always

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 BogdanB 2025-09-24 16:50:34 UTC
Number match now, thanks, Jim.
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 091ad8440e15762daad5f20cabb12e201686b234
CPU threads: 16; OS: Linux 6.14; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

The only remaining thing is "7 default paragraph style" is in the navigator and it is not used in the paragraph, is just the origin of some paragraph. We have no paragraph with 7 in text.
Comment 8 Commit Notification 2025-09-27 18:45:05 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/758eebe416aa26e61a02fb491406ad225bf36e02

tdf#168025 Fix style spotlight numbers in styles list do not always

It will be available in 25.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Jim Raykowski 2025-10-03 03:52:05 UTC
*** Bug 168670 has been marked as a duplicate of this bug. ***
Comment 10 thedeadlysarcasm 2025-10-04 10:36:43 UTC
Sorry for the lateness in checking this, but I've tried the latest 28.8 daily and I can confirm that it's fixed.

Version: 25.8.3.0.0+ (X86_64) / LibreOffice Community
Build ID: 6b124070e695649bb1480b32a15acfa606ee9738
CPU threads: 8; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: it-IT (it_IT); UI: it-IT
Calc: CL threaded

Thanks! :)
Comment 11 thedeadlysarcasm 2025-10-04 10:37:28 UTC
Er, I meant 25.8, sorry for the typo. 28.8 is still quite a bit away.