tdf#168025 Fix style spotlight numbers in styles list do not always

match style spotlight numbers in document view

This is a partial revert of commit
b5e366c97d813c65d477941d45ae55f7dff954ad

Change-Id: I016f8039d9b8e228afe26231a565679320c1f726
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191373
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>
(cherry picked from commit 3967cdfe862dd4d542ae50cf16c46a62ab17cfa0)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191411
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>